# VGLG

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt  supp_experiments_plan.md
configs/: default.yaml  distill_default.yaml
configs/data/: electricity.yaml  etth1.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  f1weather.yaml  traffic.yaml  weather.yaml
configs/model/: dlinear.yaml  gru.yaml  itransformer.yaml  lstm.yaml  metatsf_attn.yaml  metatsf_conv.yaml  metatsf_mlp.yaml  metatsf_vglg.yaml  moderntcn.yaml  patchtst.yaml  segrnn.yaml  timemixer.yaml  vglg_cnn.yaml  vglg_mlp.yaml  vglg_transformer.yaml
docs/: compute_allocation.md  model_internals.md  report.tex  results_table.md  supp_method_b_results.md  teammate_handoff_distill.md  vglg_architecture.md
scripts/: aggregate_p2.py  aggregate_supp.py  build_f1_weather.py  cache_teacher_predictions.py  cancel_p2_table2.py  check_convergence.py  check_env.py  download_data.sh  merge_p2_results.py  probe_batch_p2.py  run_ablations.py  run_all_main.sh  run_chronos_zero_shot.py  run_distill.py  run_full_distill_pipeline.sh  run_kd_fix.sh  run_metatsf_h720_scout.sh  run_metatsf_reg_scout.sh  run_metatsf_scout.sh  run_metatsf_tuned.sh  run_metatsf_tuned2.sh  run_metatsf_tuned3.sh  run_p1_table1.py  run_p2_main.py  run_supp_method_b.sh  run_supp_method_b_part1.sh  run_supp_method_b_part2.sh  smoke_test.sh  swap_when_gpu5_done.sh  update_results_table.py  verify_all.py  verify_dataloader_equivalence.py
tests/: test_backbone.py  test_data_loading.py  test_mixers.py  test_shapes.py  test_vglg_block.py
(+620 files in other folders)
